T9043 Stop toggling LangSwitch visibiility on wide layout

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -262,6 +262,10 @@
       overflow: visible;
     }
 
+    #menu-sensor:checked ~ .LanguageSwitch {
+      display: block;
+    }
+
     &__content {
       justify-content: flex-start;
     }
